--- a/src/Altairis.AskMe.Web.RazorPages/Pages/Components/Pager/Default.cshtml
+++ b/src/Altairis.AskMe.Web.RazorPages/Pages/Components/Pager/Default.cshtml
@@ -1,20 +1,24 @@
-﻿@model Altairis.AskMe.Web.RazorPages.Models.PagingInfo
+﻿@model X.PagedList.IPagedList
 <div class="pager">
-    @if (Model.PrevPageNumber > 0) {
+    @if (!Model.IsFirstPage)
+    {
         <div class="prev">
-            @if (Model.PrevPageNumber > 1) {
+            @if (@Model.PageNumber - 1 > 1)
+            {
                 <a asp-route-pageNumber="1" class="button"><i class="fas fa-chevron-left"></i><i class="fas fa-chevron-left"></i></a>
             }
-            <a asp-route-pageNumber="@Model.PrevPageNumber" class="button"><i class="fas fa-chevron-left"></i> Předchozí</a>
+            <a asp-route-pageNumber="@(Model.PageNumber - 1)" class="button"><i class="fas fa-chevron-left"></i> Předchozí</a>
         </div>
     }
-    @if (Model.NextPageNumber > 0) {
+    @if (Model.HasNextPage)
+    {
         <div class="next">
-            <a asp-route-pageNumber="@Model.NextPageNumber" class="button">Následující <i class="fas fa-chevron-right"></i></a>
-            @if (Model.NextPageNumber < Model.TotalPages) {
-                <a asp-route-pageNumber="@Model.TotalPages" class="button"><i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i></a>
+            <a asp-route-pageNumber="@(Model.PageNumber + 1)" class="button">Následující <i class="fas fa-chevron-right"></i></a>
+            @if (Model.PageNumber + 1 < Model.PageCount)
+            {
+                <a asp-route-pageNumber="@Model.PageCount" class="button"><i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i></a>
             }
         </div>
     }
-    <p>Strana @Model.PageNumber z @Model.TotalPages, celkem @Model.TotalRecords položek.</p>
+    <p>Strana @Model.PageNumber z @Model.PageCount, celkem @Model.TotalItemCount položek.</p>
 </div>
