--- a/src/Altairis.AskMe.Web.RazorPages/Pages/Questions.cshtml
+++ b/src/Altairis.AskMe.Web.RazorPages/Pages/Questions.cshtml
@@ -21,9 +21,9 @@
         </footer>
     </form>
 </section>
-@if (Model.Paging.TotalRecords > 0) {
+@if (Model.PagedData.TotalItemCount > 0) {
     <h2>Nezodpovězené otázky</h2>
-    @foreach (var item in Model.Data) {
+    @foreach (var item in Model.PagedData) {
         var id = $"q_{item.Id}";
         <article class="question" id="@id">
             <header>
@@ -32,7 +32,7 @@
                     <i class="fas fa-question fa-stack-1x fa-inverse"></i>
                 </span>
                 <span class="info">
-                    <i class="fas fa-tag"></i> @item.Category.Name
+                    <i class="fas fa-tag"></i> @item.CategoryName
                     <i class="fas fa-calendar"></i> <time value="@item.DateCreated"></time>
                     @if (!string.IsNullOrWhiteSpace(item.DisplayName)) {
                         <span><i class="fas fa-user"></i> @item.DisplayName</span>
@@ -45,5 +45,5 @@
             </footer>
         </article>
     }
-    <vc:pager model="Model.Paging"></vc:pager>
+    <vc:pager model="Model.PagedData"></vc:pager>
 }
