--- a/src/Altairis.AskMe.Web.RazorPages/Pages/Question.cshtml
+++ b/src/Altairis.AskMe.Web.RazorPages/Pages/Question.cshtml
@@ -10,7 +10,7 @@
                 <i class="fas fa-question fa-stack-1x fa-inverse"></i>
             </span>
             <span class="info">
-                <i class="fas fa-tag"></i> @Model.Data.Category.Name
+                <i class="fas fa-tag"></i> @Model.Data.CategoryName
                 <i class="fas fa-calendar"></i> <time value="@Model.Data.DateCreated"></time>
                 @if (!string.IsNullOrWhiteSpace(Model.Data.DisplayName)) {
                     <span><i class="fas fa-user"></i> @Model.Data.DisplayName</span>
